# Camvox_test

Camvox_calibr_test1/: CMakeLists.txt
Camvox_calibr_test1/calibration/: calibration.pcd
Camvox_calibr_test1/calibration/backup2_no_i/: calibration.pcd
Camvox_calibr_test1/config/: camera.yaml
Camvox_calibr_test1/include/: Calibrating.h
Camvox_calibr_test1/src/: Calibrating.cpp
Camvox_calibr_test1/test_one/: test_one.cpp
